tests/sksl/errors/EnumValueMustBeConstInt.glsl
### Compilation failed:

error: 6: enum value must be a constant integer
error: 7: enum value must be a constant integer
error: 8: enum value must be a constant integer
error: 9: enum value must be a constant integer
error: 10: enum value must be a constant integer
error: 11: enum value must be a constant integer
6 errors
